# goggin-rs-process-watch

./: AGENTS.md  Cargo.toml  README.md
examples/: api-web-common.toml
src/: lib.rs  main.rs
src/core/: cli.rs  config.rs  error.rs  mod.rs
tests/: cli.rs  core.rs  examples.rs
tests/core/: cli.rs  config.rs
tests/examples/: api_web_common.rs
