[package]
name = "goggin-rs-process-watch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
libc = "0.2.186"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tui-realm-stdlib = "4.0.0"
tuirealm = "4.0.0"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
